--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2021"
 
 [dependencies]
 entity = { path = "../entity" }
-sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-async-std-native-tls"] }
+sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-async-std-native-tls", "debug-print"] }
 tracing = "0.1.40"
 [dev-dependencies]
 tokio = { version = "1.35.1", features = ["macros", "rt"] }
+[features]
+mock = ["sea-orm/mock"]
+[[test]]
+name = "mock"
+required-features = ["mock"]
