--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -16,3 +16,6 @@ features = ["attributes", "tokio1"]
 [dependencies.sea-orm-migration]
 version = "0.12.10"
 features = ["sqlx-postgres", "runtime-tokio-rustls"]
+
+[dependencies]
+entity = { path = "../entity" }
