--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,7 +11,7 @@ entity = { path = "../entity" }
 service = { path = "../service" }
 migration = { path = "../migration" }
 actix = "0.13.1"
-actix-web = "4.0.0-beta.10"
+actix-web = { version = "4.4.1" }
 actix-cors = "0.6.5"
 actix-governor = "0.5.0"
 dotenvy = "0.15.7"
@@ -26,3 +26,4 @@ listenfd = "1.0.1"
 cached = "0.47.0"
 jsonwebtoken = "9.2.0"
 thiserror = "1.0.56"
+chrono = "0.4.31"
