--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -10,6 +10,9 @@ entity = { path = "../entity" }
 sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-async-std-native-tls", "debug-print"] }
 tracing = "0.1.40"
 [dev-dependencies]
+dotenvy = "0.15.7"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 tokio = { version = "1.35.1", features = ["macros", "rt"] }
 [features]
 mock = ["sea-orm/mock"]
