--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,9 +11,10 @@ entity = { path = "../entity" }
 service = { path = "../service" }
 migration = { path = "../migration" }
 actix-web = { version = "4.4.1" }
+tokio = { version = "1.35.1", features = ["macros"] }
 actix-governor = "0.5.0"
 dotenvy = "0.15.7"
-serde = "1.0.195"
+serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.80"
 tracing-subscriber = "0.3.18"
 clap = { version = "4.4.11", features = ["derive"] }
