--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "entity"
-version = "0.1.0"
-edition = "2021"
-publish = false
+version = { workspace = true }
+edition = { workspace = true }
+publish = { workspace = true }
 
 [lib]
 name = "entity"
@@ -11,5 +11,5 @@ path = "src/lib.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.195", features = ["derive"] }
-sea-orm = { version = "0.12.10" }
+serde = { workspace = true }
+sea-orm = { workspace = true }
