--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -1,20 +1,23 @@
 [package]
 name = "service"
-version = "0.1.0"
-edition = "2021"
+version = { workspace = true }
+edition = { workspace = true }
+publish = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 util = { path = "../util" }
 entity = { path = "../entity" }
-sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-async-std-native-tls", "debug-print"] }
-tracing = "0.1.40"
+
+sea-orm = { workspace = true, features = ["sqlx-postgres", "runtime-async-std-native-tls", "debug-print"] }
+tracing = { workspace = true }
 [dev-dependencies]
-dotenvy = "0.15.7"
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
-tokio = { version = "1.35.1", features = ["macros", "rt"] }
+dotenvy = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt"] }
+
 [features]
 mock = ["sea-orm/mock"]
 [[test]]
