--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
 api = { path = "api" }
 
 [workspace.dependencies]
+wechat-pay-rust-sdk = { version = "0.2.8", features = ["async"] }
 actix-web = { version = "4.4.1" }
 tokio = { version = "1.35.1", features = ["macros"] }
 actix-governor = "0.5.0"
