--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -4,13 +4,18 @@ version = { workspace = true }
 edition = { workspace = true }
 publish = { workspace = true }
 
+[lib]
+name = "api"
+path = "src/lib.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-entity = { path = "../entity" }
-service = { path = "../service" }
-migration = { path = "../migration" }
-util = { path = "../util" }
+entity = { workspace = true }
+service = { workspace = true }
+migration = { workspace = true }
+util = { workspace = true }
+macros = { workspace = true }
 
 wechat-pay-rust-sdk = { workspace = true }
 actix-web = { workspace = true }
