--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ migration = { path = "migration" }
 service = { path = "service" }
 util = { path = "util" }
 macros = { path = "macros" }
-
+envy = { version = "0.4.2"}
 wechat-pay-rust-sdk = { version = "0.2.8", features = ["async"] }
 actix-web = { version = "4.4.1" }
 tokio = { version = "1.35.1", features = ["macros"] }
