--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -16,7 +16,7 @@ service = { workspace = true }
 migration = { workspace = true }
 util = { workspace = true }
 macros = { workspace = true }
-
+envy = { workspace = true }
 wechat-pay-rust-sdk = { workspace = true }
 actix-web = { workspace = true }
 tokio = { workspace = true }
