--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,12 +38,13 @@ migration = { path = "migration" }
 service = { path = "service" }
 util = { path = "util" }
 macros = { path = "macros" }
-envy = { version = "0.4.2"}
+envy = { version = "0.4.2" }
 wechat-pay-rust-sdk = { version = "0.2.9", features = ["async"] }
 actix-web = { version = "4.4.1" }
 tokio = { version = "1.35.1", features = ["macros"] }
 actix-governor = "0.5.0"
 dotenvy = "0.15.7"
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
 sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-async-std-native-tls", "debug-print"] }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.80"
