--- a/util/Cargo.toml
+++ b/util/Cargo.toml
@@ -10,5 +10,6 @@ path = "src/lib.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+uuid = { workspace = true }
 md5 = { workspace = true }
 chrono = { workspace = true }
