--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
+#数据库
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/rust-ipadump
+
+# 微信支付
+WECHAT_APPID=
+WECHAT_MCH_ID=
+WECHAT_PRIVATE_KEY=apiclient_key.pem
+WECHAT_V3_KEY=
+WECHAT_SERIAL_NO=
+WECHAT_NOTIFY_URL=
