--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,12 +39,12 @@ service = { path = "service" }
 util = { path = "util" }
 macros = { path = "macros" }
 envy = { version = "0.4.2" }
-wechat-pay-rust-sdk = { version = "0.2.9", features = ["async"] }
+wechat-pay-rust-sdk = { version = "0.2.11" }
 actix-web = { version = "4.4.1" }
 tokio = { version = "1.35.1", features = ["macros"] }
 actix-governor = "0.5.0"
 dotenvy = "0.15.7"
-uuid = { version = "0.8.2", features = ["serde", "v4"] }
+uuid = { version = "1.7.0", features = ["serde", "v4"] }
 sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-async-std-native-tls", "debug-print"] }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.80"
@@ -54,7 +54,7 @@ tracing-subscriber = "0.3.18"
 tracing-actix-web = "0.7.9"
 tracing-appender = "0.2.3"
 listenfd = "1.0.1"
-cached = "0.47.0"
+cached = { version = "0.48.0", features = ["async", "redis_async_std"] }
 jsonwebtoken = "9.2.0"
 thiserror = "1.0.56"
 chrono = "0.4.31"
