--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/rust-ipadump
 # 微信支付
 WECHAT_APPID=
 WECHAT_MCH_ID=
-WECHAT_PRIVATE_KEY=apiclient_key.pem
+WECHAT_PRIVATE_KEY=
 WECHAT_V3_KEY=
 WECHAT_SERIAL_NO=
 WECHAT_NOTIFY_URL=
+WECHAT_REFERRER=https://domain.com
+WECHAT_APP_NAME=软件下载
