--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -17,7 +17,9 @@ migration = { workspace = true }
 util = { workspace = true }
 macros = { workspace = true }
 envy = { workspace = true }
-wechat-pay-rust-sdk = { workspace = true}
+qrcode = { workspace = true }
+image = { workspace = true }
+wechat-pay-rust-sdk = { workspace = true }
 actix-web = { workspace = true }
 tokio = { workspace = true }
 actix-governor = { workspace = true }
