--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rust-ipa"
 version = "0.1.0"
 edition = "2021"
-authors = ["dounine <amwoqmgo@mail.com>"]
+authors = ["lake <amwoqmgo@mail.com>"]
 description = "ipa download for rust web"
 repository = "https://github.com/dounine/rust-ipa"
 publish = false
